# wrun

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  flake.nix  generate-example.sh  rustfmt.toml  wrun-project.toml
.cargo/: config.toml
.github/: renovate.json
.github/workflows/: ci.yaml  release.yaml
foo/: wrun.toml
src/: cli.rs  data.rs  graph.rs  lib.rs  main.rs  tools.rs  vec_map.rs
