[package]
name = "wrun"
description = "Simple task runner for monorepos"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
repository = "https://github.com/wetheredge/wrun"
license = "MPL-2.0"
categories = ["command-line-utilities", "development-tools::build-utils"]

[dependencies]
anyhow = "=1.0.97"
clap = { version = "=4.5.31", features = ["derive"] }
clap_complete = { version = "=4.5.46", features = ["unstable-dynamic"] }
dotenvy = "=0.15.7"
owo-colors = { version = "=4.2.0", features = ["supports-colors"] }
serde = { version = "=1.0.218", features = ["derive", "rc"] }
serde_with = "=3.12.0"
toml = "=0.8.20"

[profile.release]
lto = true
codegen-units = 1
