[package]
name = "wrun"
description = "Simple task runner for monorepos"
version = "0.1.3"
edition = "2024"
rust-version = "1.85.0"
repository = "https://github.com/wetheredge/wrun"
license = "MPL-2.0"
categories = ["command-line-utilities", "development-tools::build-utils"]

[dependencies]
anyhow = "=1.0.98"
clap = { version = "=4.5.42", features = ["derive"] }
clap_complete = { version = "=4.5.55", features = ["unstable-dynamic"] }
dotenvy = "=0.15.7"
owo-colors = { version = "=4.2.2", features = ["supports-colors"] }
serde = { version = "=1.0.219", features = ["derive", "rc"] }
serde_with = "=3.14.0"
toml = "=0.9.5"

[profile.release]
lto = true
codegen-units = 1
